# scratchy_nets

./: Readme.md  conda_requirements.txt  requirements.txt
DecisionTrees/: .gitignore  v1.py
RNN/: .gitignore  functions.py  learning_agent.py  main.py  pyproject.toml  question_answering.py  rnn_class.py
