[tool.poetry]
name = "rnns"
version = "0.1.0"
description = ""
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
sklearn = "^0.0"
pyparsing = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
